# smpl

./: .gitignore  Cargo.toml  LICENSE  bench.smpl  grammary.ebnf  huita.js  readme.md  test.smpl
backend/: Cargo.toml
backend/src/: builder.rs  env.rs  lib.rs
backend/src/compile/: binary.rs  call.rs  copy.rs  goto.rs  if.rs  mod.rs  param.rs  return.rs  unary.rs  unless.rs
backend/src/compiler/: mod.rs
backend/src/translator/: fmt.rs  instruction.rs  mod.rs
backend/src/translator/translate/: block.rs  mod.rs
comet/comet_backend_x86/: Cargo.toml
comet/comet_backend_x86/src/: builder.rs  env.rs  lib.rs  std.nasm
comet/comet_backend_x86/src/compile/: control_flow.rs  mod.rs  sequental.rs
comet/comet_ir/: Cargo.toml
comet/comet_ir/src/: display.rs  instruction.rs  lib.rs  op.rs
compiler/frontend/: grammary.ebnf
compiler/frontend/smplc_ast/: Cargo.toml
compiler/frontend/smplc_ast/src/: ast.rs  declaration.rs  display.rs  error.rs  lib.rs  (+7 more)
compiler/frontend/smplc_lexer/: Cargo.toml
compiler/frontend/smplc_parse/: Cargo.toml
compiler/frontend/smplc_token/: Cargo.toml
compiler/linear/smplc_ir/: Cargo.toml
compiler/linear/smplc_lir/: Cargo.toml
compiler/linear/smplc_lir/src/: builder.rs  code.rs  display.rs  instruction.rs  instructions.rs  lib.rs  op.rs  value.rs  yield_vars.rs
compiler/linear/smplc_lir/src/instruction/: display.rs  ops.rs
compiler/linear/smplc_lir/src/instructions/: display.rs
compiler/linear/smplc_translate/: Cargo.toml
compiler/linear/smplc_translate/src/: call.rs  const_eval.rs  expr.rs  idents.rs  lib.rs  logic.rs  statement.rs  translator.rs
compiler/semantic/smplc_hir/: Cargo.toml
compiler/semantic/smplc_semcheck/: Cargo.toml
compiler/semantic/smplc_semcheck/src/: env.rs  error.rs  inited.rs  lib.rs  tests.rs
compiler/semantic/smplc_semcheck/src/semcheck/: declaration.rs  expr.rs  mod.rs  statement.rs  ty.rs
compiler/smplc_backend_x86/: Cargo.toml
compiler/smplc_backend_x86/src/: builder.rs  env.rs  lib.rs
compiler/smplc_translate/: Cargo.toml
compiler/smplc_translate/src/: call.rs  const_eval.rs  expr.rs  idents.rs  lib.rs  logic.rs  statement.rs  translator.rs
compiler/typing/smplc_thir/: Cargo.toml
compiler/typing/smplc_typecheck/: Cargo.toml
examples/: circle_area.smpl  collision.smpl  cycles.smpl  errors.smpl  factorial.smpl  fib.smpl  hypot.smpl  loop.smpl  mul.smpl  power.smpl  recursive_factorial.smpl
frontend/: Cargo.toml  grammary.ebnf  token_stream.rs
frontend/smplc_ast/src/: display.rs  expr.rs  lib.rs  operators.rs  statement.rs
frontend/smplc_lexer/: Cargo.toml
frontend/smplc_lexer/src/: code_stream.rs  error.rs  lexer.rs  lib.rs  pos.rs  tests.rs  token.rs
frontend/smplc_parse/: Cargo.toml
frontend/smplc_parse/src/: block.rs  error.rs  expr.rs  lib.rs  operators.rs  statement.rs  tests.rs  token_stream.rs
frontend/src/: error.rs  lib.rs  tests.rs  token_stream.rs
frontend/src/ast/: atom.rs  block.rs  expr.rs  id.rs  mod.rs  operators.rs  statements.rs
frontend/src/lexer/: code_stream.rs  mod.rs  pos.rs  tests.rs  token.rs
frontend/src/parser/: parser_utils.rs  power_bindings.rs  token_stream.rs
frontend/src/token/: fmt.rs  mod.rs  operator.rs  token_value.rs
linear/smplc_ir/: Cargo.toml
linear/smplc_ir/src/: lib.rs
linear/smplc_translate/src/: expr.rs  lib.rs  statement.rs  translator.rs
middleend/: Cargo.toml
middleend/macros/: Cargo.toml
middleend/macros/src/: lib.rs
middleend/src/: code.rs  error.rs  lib.rs  translator.rs
middleend/src/instruction/: atom.rs  display.rs  id.rs  label.rs  mod.rs
middleend/src/scopes/: function.rs  mod.rs  scope.rs  variable.rs
middleend/src/translate/: block.rs  expr.rs  mod.rs
semantic/smplc_hir/: Cargo.toml
semantic/smplc_hir/src/: expr.rs  lib.rs  statement.rs
semantic/smplc_semcheck/: Cargo.toml
semantic/smplc_semcheck/src/: env.rs  error.rs  lib.rs  tests.rs
semantic/smplc_semcheck/src/semcheck/: expr.rs  mod.rs  statement.rs
smplc/: Cargo.toml
smplc/src/: errors.rs  main.rs
smplc_backend_x86/: Cargo.toml
smplc_backend_x86/src/: env.rs
smplc_backend_x86/src/compile/: binary.rs  goto.rs  if.rs  unless.rs
smplc_bin/: Cargo.toml
smplc_bin/src/: errors.rs
src/: error.rs  lexer.rs  main.rs
src/ast/: expr.rs  id.rs  mod.rs  operators.rs  statements.rs
src/lexer/: code_stream.rs  comments.rs  comments_handler.rs  mod.rs  pos.rs  tests.rs  token.rs  unexpected_token.rs
src/lexer/comments/: mod.rs
src/lexer/comments_handler/: comment_type.rs  mod.rs
src/lexer/token/: fmt.rs  literal.rs  mod.rs  operator.rs  pos.rs  special.rs  token_pos.rs  token_value.rs
src/lexer/token_collector/: mod.rs  number_collector.rs  operator_collector.rs  special_collector.rs  word_collector.rs
src/parser/: ast.rs  mod.rs  parser_utils.rs  power_bindings.rs  tests.rs  token_stream.rs
src/parser/ast/: block.rs  declare_statement.rs  expr.rs  function_statement.rs  if_statement.rs  mod.rs  return_statement.rs  statement.rs  while_statement.rs
src/parser/collect/: block.rs  expr.rs  id.rs  mod.rs
src/parser/collectors/: block_collector.rs  declare_collector.rs  expr_collector.rs  function_collector.rs  if_collector.rs  mod.rs  return_collector.rs  statement_collector.rs  while_collector.rs
src/static_analyzer/: env.rs  mod.rs  static_error.rs
src/static_analyzer/check/: block.rs  expr.rs  mod.rs
src/translator/: fmt.rs  instruction.rs  mod.rs
src/translator/translate/: block.rs  mod.rs
static_analyzer/: Cargo.toml
static_analyzer/src/: env.rs  lib.rs
static_analyzer/src/check/: block.rs
static_analyzer/src/check/expr/: atom.rs  call.rs  infix.rs  mod.rs  prefix.rs
static_analyzer/src/check/statement/: declare_statement.rs  function_statement.rs  if_statement.rs  mod.rs  return_statement.rs  while_statement.rs
utils/smplc_macros/: Cargo.toml
utils/smplc_macros/src/: lib.rs
(+192 files in other folders)
