[workspace]
members = [
    "bin",

    "compiler/frontend/smplc_lexer",
    "compiler/frontend/smplc_parse",
    "compiler/frontend/smplc_ast",

    "compiler/semantic/smplc_hir",
    "compiler/semantic/smplc_semcheck",

    "compiler/typing/smplc_thir",
    "compiler/typing/smplc_typecheck",

    "compiler/linear/smplc_lir",
    "compiler/linear/smplc_translate",

    "compiler/smplc_backend_x86",

    "utils/smplc_macros",
]

resolver = "2"
