[workspace]
members = [
    "bin",

    "compiler/frontend/smplc_lexer",
    "compiler/frontend/smplc_parse",
    "compiler/frontend/smplc_ast",

    "compiler/semantic/smplc_hir",
    "compiler/semantic/smplc_semcheck",

    "compiler/typing/smplc_thir",
    "compiler/typing/smplc_typecheck",

    "compiler/smplc_translate",

    "comet/comet_ir",
    "comet/comet_backend_x86",

    "utils/smplc_macros",
]

resolver = "2"

[workspace.dependencies]
comet_ir = { path = "comet/comet_ir" }
comet_backend_x86 = { path = "comet/comet_backend_x86" }
