[package]
name = "smplc_bin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smplc_parse = { path = "../frontend/smplc_parse" }
smplc_lexer = { path = "../frontend/smplc_lexer" }
smplc_ast = { path = "../frontend/smplc_ast" }

smplc_semcheck = { path = "../semantic/smplc_semcheck" }
smplc_translate = { path = "../linear/smplc_translate" }

smplc_backend_x86 = { path = "../smplc_backend_x86" }

clap = { version = "4.2.5", features = ["derive"] }
colored = "2.0.0"
