[package]
name = "smplc_semcheck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smplc_ast = { path = "../../frontend/smplc_ast" }
smplc_hir = { path = "../../semantic/smplc_hir" }

smplc_parse = { path = "../../frontend/smplc_parse" }
smplc_lexer = { path = "../../frontend/smplc_lexer" }
