[package]
name = "smplc_lir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parse_int = "0.6.0"

smplc_macros = { path = "../../../utils/smplc_macros" }
smplc_ast = { path = "../../frontend/smplc_ast" }
smplc_hir = { path = "../../semantic/smplc_hir" }
