[package]
name = "smplc_lir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parse_int = "0.6.0"
nalgebra = "0.33.2"
petgraph = "0.7.1"
num = "0.4.3"

smplc_ast = { path = "../../frontend/smplc_ast" }
smplc_thir = { path = "../../typing/smplc_thir" }
smplc_macros = { path = "../../../utils/smplc_macros" }
