[package]
name = "smplc_semcheck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smplc_ast = { workspace = true }
smplc_hir = { workspace = true }

smplc_parse = { workspace = true }
smplc_lexer = { workspace = true }
